--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@ I am proficient in using the Adobe Creative Suit, though my tools of choice of l
                 
 
             </div>
-            <img src="/mouth.7b62b2ae.png" class="kalapic" alt="KALA">
+            <!-- <img src="images/mouth.png" class="kalapic" alt="KALA"> -->
         </div>
         <div class="section">
            
