--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 
                 <ul>
                     <li><a href="/about.html">ABOUT</a></li>
-                    <li><a href="#">DESIGN</a></li>
+                    <li><a href="/design.html">DESIGN</a></li>
                     <li><a href="#">ART</a></li>
                     <li><a href="#">MUSIC</a></li>
                 </ul>
