--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="/design.html">DESIGN</a></li>
                     <li><a href="/art.html">ART</a></li>
-                    <li><a href="#">MUSIC</a></li>
+                    <li><a href="/music.html">MUSIC</a></li>
                 </ul>
 
                 
