--- a/art.html
+++ b/art.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ujjwal Agarwal :: ART</title>
     <link rel="stylesheet" href="/main.d2070829.css">
-</head>
+<script src="/music.js"></script></head>
 <body>
     <!-- <header>
         <nav>
@@ -43,7 +43,7 @@
                     <li><a href="/about.html">ABOUT</a></li>
                     <li><a href="/design.html">DESIGN</a></li>
                     <li><a href="#">ART</a></li>
-                    <li><a href="#">MUSIC</a></li>
+                    <li><a href="/music.html">MUSIC</a></li>
                 </ul>
 
                 
