--- a/design.html
+++ b/design.html
@@ -43,7 +43,7 @@
                     <li><a href="/about.html">ABOUT</a></li>
                     <li><a href="#">DESIGN</a></li>
                     <li><a href="/art.html">ART</a></li>
-                    <li><a href="#">MUSIC</a></li>
+                    <li><a href="/music.html">MUSIC</a></li>
                 </ul>
 
                 
