--- a/music.html
+++ b/music.html
@@ -131,7 +131,7 @@ Soon after I released my second EP with newer influence from artists like Amon T
               <p>
 
 
-                n 2018 I put out an experimental techno EP still chasing complex dance music called Rush.                  
+                In 2018 I put out an experimental techno EP still chasing complex dance music called Rush.                  
               </p>
               <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/675573984&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kalabmusic" title="KALAB" target="_blank" style="color: #cccccc; text-decoration: none;"></a> · <a href="https://soundcloud.com/kalabmusic/sets/rush" title="Rush" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>            </div>
                
@@ -198,25 +198,17 @@ function currentSlide(n, no) {
   showSlides(slideIndex[n,no] = n, no);
 }
 
-</script>
+</script> -->
     
-    <script>
-
-        const menu = document.querySelector('.menu')
-        const close = document.querySelector('.close')
-        const nav = document.querySelector('nav')
-
-        menu.addEventListener('click', () => {
-            nav.classList.add('open-nav')
-        })
-
-        close.addEventListener('click', () => {
-            nav.classList.remove('open-nav')
-        })
-
-
-
-    </script> -->
+    <script>var menu = document.querySelector('.menu');
+var close = document.querySelector('.close');
+var nav = document.querySelector('nav');
+menu.addEventListener('click', function () {
+  nav.classList.add('open-nav');
+});
+close.addEventListener('click', function () {
+  nav.classList.remove('open-nav');
+});</script>
 
 </div></body>
 </html>
