--- a/art.html
+++ b/art.html
@@ -168,15 +168,21 @@
       Your browser does not support the video tag.
     </video>
 <br><br>
-    <div class="content">
+    <!-- <div class="content"> -->
    
       <p>
         Kalapani is a set of real-time, generative, live audio-visual installations made in Touchdesigner and Ableton Live. A singe MIDI source, generative in nature, is used in Ableton Live and routed through multiple VSTs to produce the sound. The same signal is used to manipulate transform parameters on procedural noise based systems, deigned in Touchdesigner. Kalapani literally means black waters and in the past, by the same name, was also a colonial prison in the Andaman and Nicobar Islands, India.        <br><br>
       </p>
   
-      </div>
-      <iframe width="1024" height="576" src="https://www.youtube.com/embed/-IDQ7Qj6UFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+      
+      <!-- <div class="embed-youtube">
+      <iframe width="1024" height="576" src="https://www.youtube.com/embed/-IDQ7Qj6UFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div> -->
 
+    <div class="embed-youtube">
+      <iframe src="//www.youtube.com/embed/aCOsM-4NEKs" width="750" height="563"></iframe>
+  </div>
+<!-- </div> -->
       <!-- <video style="width:100%" controls autoplay loop muted>
         <source src="images/art/KP.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -343,17 +349,16 @@ var slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5", 
 var dotId = ["dot1", "dot2", "dot3", "dot4", "dot5", "dot6", "dot7", "dot8", "dot9", "dot10", "dot11", "dot12", "dot13"];
 showSlides(1, 0);
 showSlides(1, 1);
-showSlides(1, 2);
-showSlides(1, 3);
-showSlides(1, 4);
-showSlides(1, 5);
-showSlides(1, 6);
-showSlides(1, 7);
-showSlides(1, 8);
-showSlides(1, 9);
-showSlides(1, 10);
-showSlides(1, 11);
-showSlides(1, 12);
+showSlides(1, 2); // showSlides(1, 3);
+// showSlides(1, 4);
+// showSlides(1, 5);
+// showSlides(1, 6);
+// showSlides(1, 7);
+// showSlides(1, 8);
+// showSlides(1, 9);
+// showSlides(1, 10);
+// showSlides(1, 11);
+// showSlides(1, 12);
 
 function plusSlides(n, no) {
   showSlides(slideIndex[(n, no)] += n, no);
