--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                 I have a Bachelor’s degree in Computer Engineering and a Masters in Computational Arts. I was born and raised in various parts of India and am currently looking for opportunities based out of London.<br><br>
                 
                 I love how a few pieces of binary instruction can conjure life-like, real-time systems. The multiplicity of generative art as a tool for content creation, interactive installation and an overall inclusion of technology as an intelligent co-creator rather than a static enslaved tool, is where my passion lies. <br><br>                
-I am proficient in using the Adobe Creative Suit, though my tools of choice of late have been p5.js, there.js and open frameworks(C++). Also really keen on exploring the Web 3.0 spaces.<br><br> <br><br>          
+I am proficient in using the Adobe Creative Suit, though my tools of choice of late have been p5.js, three.js and open frameworks(C++). Also really keen on exploring the Web 3.0 spaces.<br><br> <br><br>          
                 </p>
                 
                 <!-- <img src="images/mouth.png" class="kalapic" alt="KALA"> -->
