--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                My work is an exploration of cycles—of moments, of meaning—inviting others to pause, reflect, and find beauty in the ever-changing present.
+                                My work is an exploration of time—of moments, of meaning—inviting others to pause, reflect, and find beauty in the ever-changing present.
                             </p>
                             <!-- <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a> -->
 
