--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                         </h2>
 
                         <p class="h1">
-                            A cultural experiement. A contemporary beief system that reveres 'Time' as the ultimate power and truth.
+                            A cultural experiement. A contemporary belief system that reveres 'Time' as the ultimate power and truth.
                             Using art and science to find answers to existential questions and work towards the idea of ONE world.
                         </p>
                         <a href="https://www.instagram.com/orderofkala" class="btn btn--medium u-fullwidth">Explore Order of KALA</a>
