--- a/remote-stock-exchange/public/index.html
+++ b/remote-stock-exchange/public/index.html
@@ -44,6 +44,22 @@
             <h4>Hand Price Impact</h4>
             <div id="hand-summary-content"></div>
         </div>
+
+        <div id="price-log-panel" class="panel" style="display: block; max-height: 200px; overflow-y: auto; margin-top: 15px;">
+            <h4>Period Price Log</h4>
+            <table id="price-log-table">
+                <thead>
+                    <tr>
+                        <th>Period</th>
+                        <!-- Company headers will be added dynamically -->
+                    </tr>
+                </thead>
+                <tbody id="price-log-table-body">
+                    <!-- Log rows will be added dynamically -->
+                </tbody>
+            </table>
+        </div>
+
       </div>
     </div>
     
